fixed overflow

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,5 +2,6 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  border: 1px solid #00ff00;
   background-color: #fffdf6;
 }
