--- a/src/RecordPage.module.css
+++ b/src/RecordPage.module.css
@@ -1,5 +1,17 @@
 .question-wrapper {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #0000ff;
+}
+
+.question-wrapper > div {
+  flex-grow: 1;
+  overflow: auto;
+  height: 0; /* dunno why this works */
+}
+
+.question-wrapper > div > div {
   border-left: 4px solid #4193bf;
   padding: 0.4em 0.8em;
 }
