--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,6 @@ h6 {
 
 * {
   box-sizing: border-box;
-  user-select: none;
 }
 
 .hr {
